--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,5 +6,7 @@ services:
     volumes:
       - ./src/:/app/
     environment: 
-      # - PASSWORD=p
+      - PASSWORD=p
       - WG_HOST=192.168.1.233
+      #- TG_TOKEN=
+      #- TG_CHAT_ID=
