--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,12 +1,12 @@
 version: "3.8"
 services:
   wg-easy:
-    image: wg-easy
+    image: wg-easy-cn
     command: npm run serve
     volumes:
       - ./src/:/app/
     environment: 
-      - PASSWORD=p
+      # - PASSWORD=p
       - WG_HOST=192.168.1.233
-      #- TG_TOKEN=
-      #- TG_CHAT_ID=
+      # - TG_TOKEN=
+      # - TG_CHAT_ID=
